<resources>
    <string name="app_name">APODKTM</string>

    <string name="list_item_apod_card_transition_name">apod_card_%1$s</string>
    <string name="apod_detail_transition_name">apod_card_detail</string>
    <string name="apod_photo_transition_name">apod_photo</string>
    <string name="share_photo_with">Share Photo With...</string>
    <string name="share_link_with">Share Link With...</string>

    <string name="next_year">next year</string>
    <string name="prev_year">previous year</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="pick_month_and_year">Pick Month &amp; Year</string>
    <string name="ok">OK</string>
    <string name="today">TODAY</string>
    <string name="close_pick_month_year">close pick month year</string>
    <string name="prev_month">prev month</string>
    <string name="next_month">next month</string>

    <string name="empty_text">No APODs available. Try again later.</string>
    <string name="retry">Retry</string>

    <string name="cur_month_year">%1$s %2$d"</string>
    <string name="settings">settings</string>
    <string name="back_button">back button</string>
    <string name="no_video_player_found">No video player found!</string>

    <array name="months">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </array>

</resources>