<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pick_month_year_view"
    tools:background="#28ff"
    tools:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:clickable="true"
    android:focusable="true"
    android:visibility="invisible">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pick_month_year_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/close_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/close_pick_month_year"
                app:layout_constraintBottom_toBottomOf="@id/pick_month_year_label"
                app:layout_constraintEnd_toStartOf="@id/pick_month_year_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/pick_month_year_label"
                app:layout_constraintVertical_bias="0.42"
                app:srcCompat="@drawable/ic_baseline_close_24"
                app:tint="?colorOnSurface" />

            <TextView
                android:id="@+id/pick_month_year_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/pick_month_and_year"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/close_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cur_month_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textAppearance="?attr/textAppearanceHeadline2"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pick_month_year_label"
                tools:text="JAN 2021" />

            <TextView
                android:id="@+id/year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/year"
                android:textColor="?attr/colorOnPrimary"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cur_month_year" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/prev_year_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/detail_text_padding"
                android:clickable="true"
                android:contentDescription="@string/prev_year"
                android:focusable="true"
                android:src="@drawable/ic_baseline_remove_24"
                android:visibility="visible"
                app:backgroundTint="?attr/colorPrimary"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@+id/year_slider"
                app:layout_constraintEnd_toStartOf="@id/year_slider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/year_slider"
                app:tint="?attr/colorOnSurface"
                tools:visibility="visible" />

            <com.google.android.material.slider.Slider
                android:id="@+id/year_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toStartOf="@+id/next_year_button"
                app:layout_constraintStart_toEndOf="@+id/prev_year_button"
                app:layout_constraintTop_toBottomOf="@id/year_label"
                tools:valueFrom="1995"
                tools:valueTo="2021" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/next_year_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/detail_text_padding"
                android:clickable="true"
                android:contentDescription="@string/next_year"
                android:focusable="true"
                android:rotation="180"
                android:src="@drawable/ic_baseline_add_24"
                android:visibility="visible"
                app:backgroundTint="?attr/colorPrimary"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@+id/year_slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/year_slider"
                app:layout_constraintTop_toTopOf="@+id/year_slider"
                app:tint="?attr/colorOnSurface"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/month_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/month"
                android:textColor="?attr/colorOnPrimary"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/year_slider" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/month_chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/month_label"
                app:singleSelection="true"
                app:selectionRequired="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_jan"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_feb"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_mar"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_apr"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_may"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_jun"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_jul"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_aug"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sep"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_oct"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_nov"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_dec"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="JAN" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/today_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/today"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ok_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/month_chips" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/today_button"
                app:layout_constraintTop_toBottomOf="@id/month_chips" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>
